@@ -48,6 +48,7 @@ LIB_COMPOJOOM_COM_COMMUNITY="JomSocial"
 LIB_COMPOJOOM_COM_COMPROFILER="Community Builder"
 LIB_COMPOJOOM_COM_K2="K2"
 LIB_COMPOJOOM_COM_KUNENA="Kunena"
+LIB_COMPOJOOM_COM_EASYSOCIAL="EasySocial"
 LIB_COMPOJOOM_SUPPORT_AVATARS_LABEL="Enable avatars"
 LIB_COMPOJOOM_SUPPORT_AVATARS_DESC="Select the extension that we should use to fetch the user's avatars. If an option is disabled you either don't have this extension on your site, or you are using the core version of our component!"
 LIB_COMPOJOOM_SUPPORT_PROFILES_LABEL="Enable profiles"
